--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: center;
     position: relative;
 }
@@ -56,7 +56,7 @@ img {
 /* Styling for the individual topic cards rounded edges background color and a drop shadow */
 .topic-card{
     background-color: rgb(71, 71, 71);
-    color: white;
+    color: red;
     padding: 1em;
     border-radius: 0.5em;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
@@ -74,7 +74,7 @@ img {
 /* Styling for a footer section to take a bit of spcae at the bottom of the page */
 .footer{
     background-color: rgb(71, 71, 71);
-    color: white;
+    color: rgb(255, 255, 255);
     text-align: right;
     padding: 3em 3em;
 }
