--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ img {
 
 /* The hero section styling- use your OWN Hero Image URL here */
 .hero {
-    background-image: url(https://sunrisedaily.co/sunrise-photos-by-date/);
+    background-image: url(https://www.istockphoto.com/photo/sunrise-gm2192112006-610410880?utm_campaign=srp_photos_top&utm_content=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fsunrise&utm_medium=affiliate&utm_source=unsplash&utm_term=sunrise%3A%3A%3A);
     height: 25vh;
     background-size: cover;
     background-position: center;
